# wave-diffraction

./: README.md
Source/Kurs/: CMakeLists.txt  create_animation.sh  create_avi.sh  disable_ASLR.sh  enable_ASLR.sh  postBuild.sh  tags
Source/Kurs/Doc/: Doxyfile
Source/Kurs/Doc/html/: alg_8h_source.html  alg__lin_8h_source.html  alg__nonlin_8h_source.html  annotated.html  classAlg-members.html  classAlg.html  classAlgLin-members.html  classAlgLin.html  classAlgLin__coll__graph.md5  classAlgLin__inherit__graph.map  classAlgNonlin-members.html  classAlgNonlin.html  classAlgNonlin__coll__graph.map  classAlgNonlin__coll__graph.md5  classAlg__inherit__graph.map  classAlg__inherit__graph.md5  classComparer-members.html  classComparer.html  classes.html  comparer_8h_source.html  definition_8h.html  definition_8h__dep__incl.map  definition_8h__dep__incl.md5  definition_8h_source.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherits.html
Source/Kurs/Doc/html/search/: all_61.html  all_62.html  all_63.html  all_64.html  all_65.html  (+40 more)
Source/Kurs/Doc/latex/: annotated.tex  classAlg.tex  classAlgLin.tex  classAlgLin__inherit__graph.md5  classAlgNonlin.tex  classAlgNonlin__coll__graph.md5  classAlg__inherit__graph.md5  classComparer.tex  definition_8h.tex  definition_8h__dep__incl.md5  doxygen.sty  files.tex  hierarchy.tex  index.tex  refman.tex
Source/Kurs/src/: alg.cpp  alg.h  alg_lin.cpp  alg_lin.h  alg_nonlin.cpp  alg_nonlin.h  comparer.cpp  comparer.h  definition.h  main.cpp
(+26 files in other folders)
